...
    TextButton(
      modifier = Modifier
        .fillMaxWidth()
        .align(Alignment.Start),
      onClick = { showRules(false) }
    ) {
      Text(modifier = Modifier.fillMaxWidth(), text = "利用規約")
    }

    TextButton(
      modifier = Modifier.fillMaxWidth(),
      onClick = { showRules(true) }
    ) {
...
            }
          )
        }
      },
      properties = DialogProperties(usePlatformDefaultWidth = false),
      confirmButton = {
        TextButton(dismissClick) { Text("閉じる") }
      },
      shape = RoundedCornerShape(8.dp),
      modifier = Modifier
        .fillMaxSize()
        .padding(16.dp)
    )
...
